# datalake-sample-standalone

./: CMakeLists.txt  CMakeSettings.json  README.md  datalake_sample_standalone.cpp
